@@ -10,6 +10,11 @@
 	
 	* src/paused.*
 	replaced scary frame widget with dark scary background
+	
+	* src/*
+	fixed scary build errors
+	fixed scary build problems w/o SDL_mixer
+	fixed scary build problems w/ gcc 2.95
 
 2005-10-30  Volker Stroebel <volker@planetpenguin.de>
 	* src/ppogl/audio/audiomgr.cpp
